Manually mount the engine, expose js namespace for engine path

--- a/app/assets/javascripts/magic_word/index.js.coffee.erb
+++ b/app/assets/javascripts/magic_word/index.js.coffee.erb
@@ -1,5 +1,7 @@
 #= require_tree .
 
-$ ->
-  route = '<%= MagicWord::Engine.routes.url_helpers.validations_path %>'
-  $('[data-validate-model]').each -> new ValidatableForm $(this), route
+window.MagicWord = {
+  enginePath: 'magic_word'
+}
+
+$ -> $('[data-validate-model]').each -> new ValidatableForm $(this)
